--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,18 +15,30 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - {name: '3.12', python: '3.12', os: ubuntu-latest}
+          - {name: '3.11', python: '3.11', os: ubuntu-latest}
           - {name: '3.10', python: '3.10', os: ubuntu-latest}
           - {name: '3.9', python: '3.9', os: ubuntu-latest}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
-      - name: update pip
-        run: pip install -U pip setuptools wheel
-      - name: install poetry
-        run: pip install poetry poetry-dynamic-versioning
-      - name: install libraries
+      - name: Install poetry
+        uses: abatilo/actions-poetry@v2
+      - name: Setup a local virtual environment
+        run: |
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+      - name: Instasll poethepoet
+        run: poetry self add 'poethepoet[poetry_plugin]'
+      - name: Instasll poetry-dynamic-versioning
+        run: poetry self add 'poetry-dynamic-versioning[plugin]'
+      - uses: actions/cache@v3
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
+      - name: Install libraries
         run: poetry install
       - name: run lint
         run: poetry run poe lint
@@ -38,18 +50,30 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - {name: '3.12', python: '3.12', os: ubuntu-latest}
+          - {name: '3.11', python: '3.11', os: ubuntu-latest}
           - {name: '3.10', python: '3.10', os: ubuntu-latest}
           - {name: '3.9', python: '3.9', os: ubuntu-latest}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
-      - name: update pip
-        run: pip install -U pip setuptools wheel
-      - name: install poetry
-        run: pip install poetry poetry-dynamic-versioning
-      - name: install libraries
+      - name: Install poetry
+        uses: abatilo/actions-poetry@v2
+      - name: Setup a local virtual environment
+        run: |
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+      - name: Instasll poethepoet
+        run: poetry self add 'poethepoet[poetry_plugin]'
+      - name: Instasll poetry-dynamic-versioning
+        run: poetry self add 'poetry-dynamic-versioning[plugin]'
+      - uses: actions/cache@v3
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
+      - name: Install libraries
         run: poetry install
       - name: run test
         run: poetry run poe test
@@ -67,20 +91,30 @@ jobs:
         env:
           REF: ${{ github.ref }}
         run: echo "${REF##*/}"
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      - name: Update pip
-        run: pip install -U pip setuptools wheel
       - name: Install poetry
-        run: pip install poetry poetry-dynamic-versioning
-      - name: Install dependent libraries
+        uses: abatilo/actions-poetry@v2
+      - name: Setup a local virtual environment
+        run: |
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+      - name: Instasll poethepoet
+        run: poetry self add 'poethepoet[poetry_plugin]'
+      - name: Instasll poetry-dynamic-versioning
+        run: poetry self add 'poetry-dynamic-versioning[plugin]'
+      - uses: actions/cache@v3
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
+      - name: Install libraries
         run: poetry install
       - name: Build package
         run: poetry build
       - name: Upload artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: 'dist'
           path: 'dist'
